# Simulation-Engine

./: .gitignore  CMakeLists.txt  OpenGL.cpp  OpenGL.h  main.cpp
Collideable/: CollideAction.cpp  CollideAction.h  Collideable.cpp  Collideable.h  Collider.cpp  Collider.h  CollisionSandbox.cpp  CollisionSandbox.h
Collideable/CollideActions/: CollideActions.h  ElasticCollision.cpp  ElasticCollision.h  NoReaction.cpp  NoReaction.h  ReflectVelocity.cpp  ReflectVelocity.h
Collideable/CollisionPrimitives/: Circle.cpp  Circle.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
Collideable/ConcreteColliders/: CircleCollider.cpp  CircleCollider.h  ConcreteColliders.h  PointCollider.cpp  PointCollider.h  RectangleCollider.cpp  RectangleCollider.h
GameObjects/: EnvironmentBox.h  GameObject.h
InputHandler/: Game.cpp  Game.h  PlayerInputHandler.cpp  PlayerInputHandler.h
RigidBodies/: Ball.cpp  Ball.h  ConcreteRigidBodies.h  EnvironmentBox.cpp  EnvironmentBox.h  PhysicsSandbox.cpp  PhysicsSandbox.h  Rectangle.cpp  Rectangle.h  RigidBody.cpp  RigidBody.h
server/: .gitignore  CMakeLists.txt  Cargo.toml  mock_server.h  server.h
server/src/: client.rs  lib.rs  server.rs
shaders/: shader.frag  shader.vert
